correção de rotas no swagger
