# src/swagger.json
@@ -10,54 +10,74 @@
         }
     },
     "servers": [{
-            "url": "http://localhost:8080/trade/v1",
+            "url": "http://localhost:8080/",
             "description": "API de testes"
         },
         {
-            "url": "https://api-tradmap.herokuapp.com/trade/v1",
+            "url": "https://api-tradmap.herokuapp.com/",
             "description": "API de produção"
         }
     ],
     "basePath": "/",
-    "tags": [{
-        "name": "User",
-        "description": "Api for users in the system"
-    }],
-    "schemes": [
-        "http"
-    ],
-    "consumes": [],
-    "produces": [],
     "paths": {
-        "/lista": {
+        "/trade/v1/lista": {
             "get": {
+                "summary": "Carrega todos os stocks",
                 "tags": [
                     "Stocks"
                 ],
-                "description": "",
-                "parameters": [],
+                "security": [{
+                    "bearerAuth": []
+                }],
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Erro ao listar stocks."
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Stocks"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/stocks-favoritos": {
+        "/trade/v1/stocks-favoritos": {
             "get": {
+                "summary": "Carrega todos os stocks marcados como favoritos",
                 "tags": [
                     "Stocks"
                 ],
-                "description": "",
-                "parameters": [],
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Erro ao listar stocks."
+                    },
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/Stocks"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/set-favorite/{id_trade}": {
+        "/trade/v1/set-favorite/{id_trade}": {
             "put": {
                 "tags": [
                     "Stocks"
@@ -89,7 +109,7 @@
                 }
             }
         },
-        "/login": {
+        "/auth/v1/login": {
             "post": {
                 "summary": "Login de usuário",
                 "tags": [
@@ -99,7 +119,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/definitions/User"
+                                "$ref": "#/components/schemas/User"
                             },
                             "examples": {
                                 "user": {
@@ -120,12 +140,20 @@
                         "description": "Usuário não encontrado."
                     },
                     "200": {
-                        "description": "Usuário logado com sucesso."
+                        "description": "Usuário logado com sucesso.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
                     }
                 }
             }
         },
-        "/register": {
+        "/auth/v1/register": {
             "post": {
                 "summary": "Cadastro de usuário",
                 "tags": [
@@ -135,7 +163,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/definitions/User"
+                                "$ref": "#/components/schemas/User"
                             },
                             "examples": {
                                 "user": {
@@ -157,94 +185,123 @@
                         "description": "Email ja cadastrado."
                     },
                     "200": {
-                        "description": "Usuário cadastrado com sucesso."
-                    }
-                }
-            }
-        },
-        "/update-user/{id_user}": {
-            "put": {
-                "tags": [
-                    "User"
-                ],
-                "description": "",
-                "parameters": [{
-                        "name": "id_user",
-                        "in": "path",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "obj",
-                        "in": "body",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "favorito": {
-                                    "example": "any"
+                        "description": "Usuário cadastrado com sucesso.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
                                 }
                             }
                         }
                     }
+                }
+            }
+        },
+        "/auth/v1/update-user/{id_user}": {
+            "put": {
+                "summary": "Atualização de usuário",
+                "tags": [
+                    "User"
                 ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
+                            },
+                            "examples": {
+                                "user": {
+                                    "value": {
+                                        "email": "adm@gmail.com",
+                                        "password": "123"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
                 "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Usuário não encontrado."
+                    },
+                    "200": {
+                        "description": "Usuário logado com sucesso.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
     },
-    "definitions": {
-        "User": {
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "required": true
-                },
-                "email": {
-                    "type": "string",
-                    "required": true
-                },
-                "password": {
-                    "type": "string",
-                    "required": true
+    "components": {
+        "schemas": {
+            "User": {
+                "properties": {
+                    "name": {
+                        "type": "string",
+                        "required": true
+                    },
+                    "email": {
+                        "type": "string",
+                        "required": true
+                    },
+                    "password": {
+                        "type": "string",
+                        "required": true
+                    }
+                }
+            },
+            "Stocks": {
+                "properties": {
+                    "stock": {
+                        "type": "string",
+                        "equired": true
+                    },
+                    "exchange": {
+                        "type": "string",
+                        "equired": true
+                    },
+                    "country": {
+                        "type": "string",
+                        "equired": true
+                    },
+                    "company": {
+                        "type": "string",
+                        "equired": true
+                    },
+                    "variation": {
+                        "type": "number",
+                        "equired": true
+                    },
+                    "price": {
+                        "type": "number",
+                        "equired": true
+                    },
+                    "favorito": {
+                        "type": "boolean",
+                        "default": false
+                    },
+                    "chart": {
+                        "type": "array"
+                    }
                 }
             }
         },
-        "Stocks": {
-            "properties": {
-                "stock": {
-                    "type": "string",
-                    "equired": true
-                },
-                "exchange": {
-                    "type": "string",
-                    "equired": true
-                },
-                "country": {
-                    "type": "string",
-                    "equired": true
-                },
-                "company": {
-                    "type": "string",
-                    "equired": true
-                },
-                "variation": {
-                    "type": "number",
-                    "equired": true
-                },
-                "price": {
-                    "type": "number",
-                    "equired": true
-                },
-                "favorito": {
-                    "type": "boolean",
-                    "default": false
-                },
-                "chart": {
-                    "type": "array"
-                }
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
             }
         }
     }
